@@ -2,7 +2,7 @@
   "name": "jambagecom/static-info-tables-es",
   "type": "typo3-cms-extension",
   "description": "Spanish (es) language pack for the Static Info Tables providing localized names for countries, currencies and so on.",
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "repositories": [
     {
       "type": "composer",
@@ -25,12 +25,12 @@
     }
   ],
   "replace": {
-    "static_info_tables_es": "self.version",
+    "sjbr/static-info-tables-es": "self.version",
     "typo3-ter/static-info-tables-es": "self.version"
   },
   "require": {
     "php": "^7.0",
-    "typo3/cms-core": "^8.7 || ^9.5",
+    "typo3/cms-core": "^8.7 || ^9.5 || ^10.0",
     "sjbr/static-info-tables": "^6.7"
   },
   "extra": {
